# docs/swagger.yaml
@@ -65,6 +65,27 @@ definitions:
           $ref: '#/definitions/models.MainFriend'
         type: array
     type: object
+  models.FindEnd:
+    properties:
+      error:
+        type: string
+      find:
+        $ref: '#/definitions/models.FindMiddle'
+    type: object
+  models.FindMiddle:
+    properties:
+      ID:
+        type: integer
+      email:
+        type: string
+      name:
+        type: string
+    type: object
+  models.FindPerson:
+    properties:
+      email:
+        type: string
+    type: object
   models.HistoryMsg:
     properties:
       msg:
@@ -298,6 +319,29 @@ paths:
       summary: 拒绝好友申请
       tags:
       - application
+  /application/search:
+    get:
+      consumes:
+      - application/json
+      parameters:
+      - description: 申请请求
+        in: body
+        name: request
+        required: true
+        schema:
+          $ref: '#/definitions/models.FindPerson'
+      produces:
+      - application/json
+      responses:
+        "200":
+          description: OK
+          schema:
+            $ref: '#/definitions/models.FindEnd'
+      security:
+      - BearerAuth: []
+      summary: 查看待添加好友
+      tags:
+      - application
   /chat/history:
     get:
       consumes:
@@ -312,30 +356,6 @@ paths:
       security:
       - BearerAuth: []
       summary: 查看历史聊天记录
-      tags:
-      - chat
-  /chat/pm:
-    get:
-      description: '建立私聊长连接。鉴权支持 Authorization: Bearer <token>，也支持 query token'
-      parameters:
-      - description: JWT token
-        in: query
-        name: token
-        type: string
-      responses:
-        "101":
-          description: Switching Protocols
-          schema:
-            type: string
-        "401":
-          description: 未登录或 token 无效
-          schema:
-            additionalProperties:
-              type: string
-            type: object
-      security:
-      - BearerAuth: []
-      summary: 私聊 WebSocket 收发消息
       tags:
       - chat
   /chat/read:
@@ -488,7 +508,7 @@ paths:
             type: string
       security:
       - BearerAuth: []
-      summary: 重新发送验证码以便修改密码
+      summary: 发送验证码以便验证身份
       tags:
       - user
   /user/register:
